--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==1.7.1
 django-pgjson==0.2.1
 djangorestframework==3.0.0
 gunicorn==19.1.1
+newrelic==2.40.0.34
 psycopg2==2.5.4
 whitenoise==1.0.5
 wsgiref==0.1.2
