--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+celery==3.1.17
 dj-database-url==0.3.0
 Django==1.7.1
 django-pgjson==0.2.1
 djangorestframework==3.0.0
 gunicorn==19.1.1
 psycopg2==2.5.4
+requests==2.5.0
 whitenoise==1.0.5
 wsgiref==0.1.2
