--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+Django==1.7.1
 celery==3.1.17
 dj-database-url==0.3.0
-Django==1.7.1
+django-extensions==1.4.8
 django-pgjson==0.2.1
 djangorestframework==3.0.0
 gunicorn==19.1.1
